// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Test component 1`] = `
<div
  className="test"
>
  <MockComponent
    model={
      Object {
        "getComponentClass": [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": "MockComponent",
            },
          ],
        },
      }
    }
    moduleData={
      Object {
        "focusState": Object {},
      }
    }
  />
  <div
    className="submit-button"
  >
    <div
      className="obojobo-draft--components--button is-not-dangerous align-center"
      contentEditable={false}
    >
      <button
        className="button"
        contentEditable={false}
      >
        Submit (Not all questions have been answered)
      </button>
    </div>
  </div>
</div>
`;

exports[`Test Test component fetching score 1`] = `
<div
  className="test"
>
  <MockComponent
    model={
      Object {
        "getComponentClass": [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": "MockComponent",
            },
          ],
        },
      }
    }
    moduleData={
      Object {
        "focusState": Object {},
      }
    }
  />
  <div
    className="submit-button"
  >
    <div
      className="obojobo-draft--components--button is-not-dangerous align-center"
      contentEditable={false}
    >
      <button
        className="button"
        contentEditable={false}
        disabled={true}
      >
        Loading ...
      </button>
    </div>
  </div>
</div>
`;

exports[`Test Test component with completeAttempt 1`] = `
<div
  className="test"
>
  <MockComponent
    model={
      Object {
        "getComponentClass": [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": "MockComponent",
            },
          ],
        },
      }
    }
    moduleData={
      Object {
        "focusState": Object {},
      }
    }
  />
  <div
    className="submit-button"
  >
    <div
      className="obojobo-draft--components--button is-not-dangerous align-center"
      contentEditable={false}
    >
      <button
        className="button"
        contentEditable={false}
      >
        Submit
      </button>
    </div>
  </div>
</div>
`;
